objects/SFDC_Project__c.object
<CustomObject>
    <description>SFDC Project</description>
    <fields>
        <fullName>Business_Capability_Other__c</fullName>
        <label>Other(Business Capability)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Capability__c</fullName>
        <label>Business Capability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Device Management</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence/Dashboards</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Product Catalog</fullName>
                </value>
                <value>
                    <fullName>Customer Collaboration</fullName>
                </value>
                <value>
                    <fullName>QRA Systems</fullName>
                </value>
                <value>
                    <fullName>S&amp;M Training</fullName>
                </value>
                <value>
                    <fullName>Help Desk &amp; Case Management</fullName>
                </value>
                <value>
                    <fullName>Content Management</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Mobile Devices</fullName>
                </value>
                <value>
                    <fullName>Customer Visitation</fullName>
                </value>
                <value>
                    <fullName>Customer Surveys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Portfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owners__c</fullName>
        <formula>Business_Owner__r.LastName &amp;&quot; &quot; &amp; Business_Owner__r.FirstName</formula>
        <label>Business Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRM Enhancement</fullName>
                </value>
                <value>
                    <fullName>Foundryview 2.0 External App</fullName>
                </value>
                <value>
                    <fullName>3rd Party Enhancements</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Milestone</label>
        <referenceTo>SFDC_Project_Milestone__c</referenceTo>
        <relationshipLabel>SFDC Project</relationshipLabel>
        <relationshipName>CurrentMilestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Milestones__c</fullName>
        <formula>Current_Milestone__r.Name__c</formula>
        <label>Current Milestone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Stage</label>
        <referenceTo>SFDC_Project_Stage__c</referenceTo>
        <relationshipLabel>SFDC Portfolio</relationshipLabel>
        <relationshipName>CurrentStage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Stages__c</fullName>
        <formula>Current_Stage__r.Name</formula>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Completion_Date__c -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Portfolio2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Owners__c</fullName>
        <formula>IT_Owner__r.LastName   &amp;  &quot; &quot;  &amp; IT_Owner__r.FirstName</formula>
        <label>IT Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Portfolio3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Project_Managers__c</fullName>
        <formula>IT_Project_Manager__r.LastName  &amp; &quot; &quot;  &amp;   IT_Project_Manager__r.FirstName</formula>
        <label>IT Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>High - $Million or More
Medium - $250k to $Million
Low - Less than $250k</description>
        <inlineHelpText>High - $Million or More
Medium - $250k to $Million
Low - Less than $250k</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_End_Date__c</fullName>
        <formula>End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Overall_Status__c</fullName>
        <formula>CASE( Overall_Status__c  , &quot;Red&quot;, &quot;Red&quot;, &quot;Yellow&quot;, &quot;Yellow&quot;, &quot;Green&quot;,&quot;Green&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Start_Date__c</fullName>
        <formula>Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Status_Date__c</fullName>
        <formula>Status_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Sponsoring_Organization__c</fullName>
        <description>Mandatory to be filled when Other Sponsoring Organization is selected.</description>
        <inlineHelpText>Mandatory to be filled when Other Sponsoring Organization is selected.</inlineHelpText>
        <label>Other (Sponsoring Organization)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_User_Group__c</fullName>
        <description>Fill in other User Group, if it&apos;s not listed.</description>
        <inlineHelpText>Fill in other User Group, if it&apos;s not listed.</inlineHelpText>
        <label>Other (User Group)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Sequence__c</fullName>
        <label>Priority Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Transformation Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status_Indicator__c</fullName>
        <label>Project Status Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive - Not Started</fullName>
                </value>
                <value>
                    <fullName>Inactive - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Inactive - On Hold</fullName>
                </value>
                <value>
                    <fullName>Inactive - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sponsoring_Organization__c</fullName>
        <label>Sponsoring Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Worldwide Sales (Sales &amp; Marketing)</fullName>
                </value>
                <value>
                    <fullName>Quality (Sales &amp; Marketing)</fullName>
                </value>
                <value>
                    <fullName>Product Marketing (Sales &amp; Marketing)</fullName>
                </value>
                <value>
                    <fullName>Transformation (Sales &amp; Marketing)</fullName>
                </value>
                <value>
                    <fullName>Business Development (Sales &amp; Marketing)</fullName>
                </value>
                <value>
                    <fullName>Design Enablement (Sales &amp; Marketing)</fullName>
                </value>
                <value>
                    <fullName>Sales Operations (Sales &amp; Marketing)</fullName>
                </value>
                <value>
                    <fullName>Field Marketing (Sales &amp; Marketing)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>Immediate (3-6 Months)
Mid-Term (6 -12 Months)
Long Term (12 month or beyond)</description>
        <inlineHelpText>Immediate (3-6 Months)
Mid-Term (6 -12 Months)
Long Term (12 month or beyond)</inlineHelpText>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Mid Term</fullName>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Group__c</fullName>
        <label>User Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SM - Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>FIN - Finance</fullName>
                </value>
                <value>
                    <fullName>CE –Customer Engineering</fullName>
                </value>
                <value>
                    <fullName>PR - Pricing</fullName>
                </value>
                <value>
                    <fullName>CSR - Customer Service Representative</fullName>
                </value>
                <value>
                    <fullName>SO – Sales Operations</fullName>
                </value>
                <value>
                    <fullName>SS – Systems and Solutions</fullName>
                </value>
                <value>
                    <fullName>PM  - Product Marketing</fullName>
                </value>
                <value>
                    <fullName>TD – Technology Development</fullName>
                </value>
                <value>
                    <fullName>DE – Design Enablement</fullName>
                </value>
                <value>
                    <fullName>FTS – Field Technical Support</fullName>
                </value>
                <value>
                    <fullName>GTO – Global Tapeout Operations</fullName>
                </value>
                <value>
                    <fullName>DS - - Design Solutions</fullName>
                </value>
                <value>
                    <fullName>PI –Process Integrator</fullName>
                </value>
                <value>
                    <fullName>Q -  Quality</fullName>
                </value>
                <value>
                    <fullName>IT – Information Technology</fullName>
                </value>
                <value>
                    <fullName>TRNG - Training</fullName>
                </value>
                <value>
                    <fullName>MCM -MARCOM</fullName>
                </value>
                <value>
                    <fullName>LGL - Legal</fullName>
                </value>
                <value>
                    <fullName>FTS – Field Application Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor2__c</fullName>
        <label>Selected Vendor 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor3__c</fullName>
        <label>Other Selected Vendors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Primary Selected Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWMS_System_Solution_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WWMS System &amp; Solution Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Portfolio1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WWMS_System_Solution_Owners__c</fullName>
        <formula>WWMS_System_Solution_Owner__r.LastName  &amp; &quot; &quot; &amp; WWMS_System_Solution_Owner__r.FirstName</formula>
        <label>WWMS System &amp; Solution Owner</label>
        <type>Text</type>
    </fields>
    <label>SFDC Project</label>
    <listViews>
        <fullName>Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Impact__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Urgency__c</columns>
        <columns>Priority__c</columns>
        <columns>End_Date__c</columns>
        <columns>Project_Status_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status_Indicator__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Projects</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_View</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Business_Owners__c</columns>
        <columns>WWMS_System_Solution_Owners__c</columns>
        <columns>Current_Stage__c</columns>
        <columns>IT_Owners__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Sponsoring_Organization__c</columns>
        <columns>Start_Date__c</columns>
        <columns>User_Group__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Project_Status_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All View</label>
    </listViews>
    <listViews>
        <fullName>Not_Started_Projects</fullName>
        <columns>NAME</columns>
        <columns>Impact__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Urgency__c</columns>
        <columns>Priority__c</columns>
        <columns>End_Date__c</columns>
        <columns>Project_Status_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status_Indicator__c</field>
            <operation>equals</operation>
            <value>Inactive - Not Started</value>
        </filters>
        <label>Not Started Projects</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Other_Projects</fullName>
        <columns>NAME</columns>
        <columns>Impact__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Urgency__c</columns>
        <columns>Priority__c</columns>
        <columns>End_Date__c</columns>
        <columns>Project_Status_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status_Indicator__c</field>
            <operation>equals</operation>
            <value>Inactive - Cancelled,Inactive - On Hold,Inactive - Duplicate</value>
        </filters>
        <label>Other Projects</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SFDC_Portfolio_Active</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>WWMS_System_Solution_Owner__c</columns>
        <columns>Project_Status_Indicator__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Current_Stage__c</columns>
        <columns>Impact__c</columns>
        <columns>IT_Owner__c</columns>
        <columns>IT_Project_Manager__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Sponsoring_Organization__c</columns>
        <columns>Business_Capability__c</columns>
        <columns>Vendor__c</columns>
        <columns>Priority_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status_Indicator__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>SFDC Portfolio Active</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Portfolio</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>